# django-mcp-assistant

./: db.sqlite3  main.py  manage.py  pyproject.toml
mcp_chat/: apps.py  mcp_client.py  mcp_servers.py  models.py  urls.py  views.py
mcp_chat/migrations/: 0001_initial.py
mcp_chat/templates/mcp_chat/: index.html
mcp_project/: asgi.py  settings.py  urls.py  wsgi.py
